--- a/index.html
+++ b/index.html
@@ -15,21 +15,17 @@
                     <h1 class="header__title">classiFurs</h1>
                 </div>
                 <div class="header__forms">
-                    <form class="header__pets" action="">
+                    <form class="header__form" action="">
                         <label for="header__pet" class="visuallyhidden">Pets</label>
                         <select name="header__pet" id="header__pet">
                             <option value="dog">Dogs</option>
                             <option value="cat">Cats</option>
                         </select>
-                    </form>
-                    <form class="header__gender" action="">
                         <label for="header__sex" class="visuallyhidden">Gender</label>
                         <select name="header__sex" id="header__sex">
                             <option value="male">Male</option>
                             <option value="female">Female</option>
                         </select>
-                    </form>
-                    <form class="header__age" action="">
                         <label for="header__maturity" class="visuallyhidden">Age</label>
                         <select name="header__maturity" id="header__maturity">
                             <option value="baby">Baby</option>
@@ -37,6 +33,10 @@
                             <option value="adult">Adult</option>
                             <option value="senior">Senior</option>
                         </select>
+                        <label for="header__location" class="visuallyhidden">Location</label>
+                        <input type="text" name="header__location" id="header__location" placeholder="City, Province, Country">
+                        <label for="header__submit" class="visuallyhidden">Search</label>
+                        <input type="submit" id="header__submit" class="header__submit" value="Search">
                     </form>
                 </div>
             </div>
@@ -44,7 +44,7 @@
     </header>
     <main>
         <section class="entries wrapper">
-            <div class="entries__post"></div>
+            <div class="entries__post" id="pet"></div>
             <div class="entries__post"></div>
             <div class="entries__post"></div>
             <div class="entries__post"></div>
