--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>classiFurs</title>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Vollkorn:400,700" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
