--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                         </select>
                         <label for="header__sex" class="visuallyhidden">Gender</label>
                         <select name="header__sex" id="header__sex">
-                            <option value="male">Male</option>
-                            <option value="female">Female</option>
+                            <option value="M">Male</option>
+                            <option value="F">Female</option>
                         </select>
                         <label for="header__maturity" class="visuallyhidden">Age</label>
                         <select name="header__maturity" id="header__maturity">
-                            <option value="baby">Baby</option>
-                            <option value="young">Young</option>
-                            <option value="adult">Adult</option>
-                            <option value="senior">Senior</option>
+                            <option value="Baby">Baby</option>
+                            <option value="Young">Young</option>
+                            <option value="Adult">Adult</option>
+                            <option value="Senior">Senior</option>
                         </select>
                         <label for="header__location" class="visuallyhidden">Location</label>
                         <input type="text" name="header__location" id="header__location" placeholder="City, Province, Country">
@@ -44,11 +44,7 @@
         </div>
     </header>
     <main>
-        <section class="entries wrapper">
-            <div class="entries__post" id="pet"></div>
-            <div class="entries__post"></div>
-            <div class="entries__post"></div>
-            <div class="entries__post"></div>
+        <section class="entries wrapper" id="pet">
         </section>
     </main>
     
