--- a/index.html
+++ b/index.html
@@ -24,18 +24,20 @@
                         </select>
                         <label for="header__sex" class="visuallyhidden">Gender</label>
                         <select name="header__sex" id="header__sex">
+                            <option value="">Any</option>
                             <option value="M">Male</option>
                             <option value="F">Female</option>
                         </select>
                         <label for="header__maturity" class="visuallyhidden">Age</label>
                         <select name="header__maturity" id="header__maturity">
+                            <option value="">Any</option>
                             <option value="Baby">Baby</option>
                             <option value="Young">Young</option>
                             <option value="Adult">Adult</option>
                             <option value="Senior">Senior</option>
                         </select>
                         <label for="header__location" class="visuallyhidden">Location</label>
-                        <input type="text" name="header__location" id="header__location" placeholder="City, Province, Country">
+                        <input type="text" name="header__location" id="header__location" placeholder="City, Province">
                         <label for="header__submit" class="visuallyhidden">Search</label>
                         <input type="submit" id="header__submit" class="header__submit" value="Search">
                     </form>
