buttons edited search works

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
                         </select>
                         <label for="header__sex" class="visuallyhidden">Gender</label>
                         <select name="header__sex" id="header__sex">
+                            <option value="">Any</option>
                             <option value="M">Male</option>
                             <option value="F">Female</option>
                         </select>
                         <label for="header__maturity" class="visuallyhidden">Age</label>
                         <select name="header__maturity" id="header__maturity">
+                            <option value="">Any</option>
                             <option value="Baby">Baby</option>
                             <option value="Young">Young</option>
                             <option value="Adult">Adult</option>
@@ -46,7 +48,9 @@
     <main>
         <section class="entries wrapper" id="pet">
         </section>
+        <section class="profile" id="pet"></section>
     </main>
+
     
     
     <!-- SCRIPTS STARTS -->
