Updated and working

--- a/index.html
+++ b/index.html
@@ -46,13 +46,10 @@
         </div>
     </header>
     <main>
-        <section class="entries wrapper" id="pet">
-        </section>
-        <section class="profile" id="pet"></section>
+        <div class="entries wrapper" id="pet"></div>
+        <div class="profile" id="profile"></div>
     </main>
 
-    
-    
     <!-- SCRIPTS STARTS -->
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
     <script src="scripts/scripts.js"></script>
