--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>classiFurs</title>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Montserrat:300,400,500,600" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" type="image/png" href="styles/assets/favicon.png">
+    <title>classiFurs</title>
 </head>
 <body>
     
