--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Montserrat:300,400,500,600" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" type="image/png" href="styles/assets/favicon.png">
-    <title>classiFurss</title>
+    <title>classiFurs</title>
 </head>
 <body>
     
